;Judge/Temporary_Error/298.log
./temp/298/code.cpp:1:1: error: expected unqualified-id before numeric constant
 123
 ^
